--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,12 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: dark;
-  color: #E6E6E6;
-  background-color: #0B0B0B;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --red: #FF0000;
 }
 
 /* --- FONTS --- */
@@ -25,10 +23,11 @@
 .oswald {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  color: var(--red);
 }
 /* Annotations or "crossing out" a dead character */
 .scribble {
   font-family: 'Scribble', sans-serif;
   text-transform: uppercase;
-  color: #FF0000;
+  color: var(--red);
 }
