--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,10 @@ main {
         background-size: 100% 100%, 100% 100%;
     }
 }
+.startSeasonViewContainer {
+    margin: auto;
+    width: 80vw;
+}
 .form {
     margin: 20px;
     display: flex;
@@ -96,7 +100,33 @@ main {
 }
 /* Specific to the variant button container */
 .variantContainer {
+    margin: 20px 0;
+}
+/* Roster Selector at start of season */
+.rosterSelectorContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+/* GLOBAL List view of characters */
+.rosterList {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: center;
+    gap: 20px;
 
+    .button {
+        padding: 0;
+    }
+
+    img {
+        width: 110% !important;
+        margin-bottom: 20px;
+    }
+    p {
+        text-align: center;
+    }
 }
 /* GLOBAL button styles : used for input button on forms */
 .dbdInputButton {
@@ -127,11 +157,18 @@ main {
             transform 0.2s ease-in-out,
             border-color 0.3s ease;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+
     img {
         width: 80px;
     }
 }
-.dbdInputButton:hover, .selectedButton {
+.dbdInputButton:hover:not(.rosterList .button:hover), .selectedButton {
     background-color: rgba(0, 0, 0, 0.90);
     background-size:
             25% 2px, 2px 25%, /* Top Left */
@@ -152,6 +189,11 @@ main {
     background-color: rgba(18, 18, 18, 0.95);
     color: var(--text-muted);
     box-shadow: -8px 6px 3px rgba(0, 0, 0, 0.6);
+
+    li {
+        text-wrap: wrap;
+        width: 80vw;
+    }
 }
 /* GLOBAL Card hover styles to make corner borders grow on hover : can be used for any hover-able items */
 .cardHover {
