--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,11 @@ main {
 .inputButtonsContainer {
     display: flex;
     gap: 20px;
+    margin: 10px 0;
+
+    button {
+        width: fit-content;
+    }
 }
 /* The container that holds the variant options */
 .variantOptionsContainer {
@@ -113,7 +118,6 @@ main {
 .rosterSelectorContainer {
     display: flex;
     flex-direction: column;
-    gap: 20px;
 
     .dbdButtonContainer {
         display: flex;
@@ -131,6 +135,10 @@ main {
         padding: 0;
     }
 
+    .dbdInputButton {
+        position: relative;
+    }
+
     img {
         width: 110% !important;
         margin-bottom: 20px;
@@ -138,6 +146,29 @@ main {
     p {
         text-align: center;
     }
+}
+/* The price tags over the killers */
+.priceTag {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: var(--red);
+    border: 1px solid #000;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+.priceTagInput {
+    width: 40px;
+    background: transparent;
+    border: none;
+    color: white;
+    text-align: center;
 }
 /* GLOBAL button styles : used for input button on forms */
 .dbdInputButton {
@@ -200,11 +231,6 @@ main {
     background-color: rgba(18, 18, 18, 0.95);
     color: var(--text-muted);
     box-shadow: -8px 6px 3px rgba(0, 0, 0, 0.6);
-
-    li {
-        text-wrap: wrap;
-        width: 80vw;
-    }
 }
 /* GLOBAL Card hover styles to make corner borders grow on hover : can be used for any hover-able items */
 .cardHover {
