--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,9 @@
 }
 
 main {
-    background: url('../public/assets/woods_background.png') center no-repeat;
+    background: url('../public/assets/woods_background.png') no-repeat fixed center;
     background-size: cover;
     min-height: 100vh;
-    max-height: 100vh;
-    overflow: auto;
     display: flex;
     flex-direction: column;
     color: var(--text-muted);
@@ -15,28 +13,79 @@ main {
 .header {
     position: sticky;
     top: 0; left: 0;
+    height: 60px;
+    box-sizing: border-box;
     z-index: 100;
-    background: rgba(18, 18, 18, 0.98);
-    padding: 10px;
+    background: rgba(18, 18, 18, 0.7);
+    border-bottom: 3px solid rgb(18, 18, 18);
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+}
+.navButtonContainer {
+    display: flex;
+    gap: 0 20px;
 }
 
 /* GLOBAL Styles for the entire component containers */
 .componentContainer {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 1;
+
+    h2.special-elite {
+        align-self: start;
+        margin-left: 10vw;
+    }
+}
+.startMatchContainer {
+    gap: 20px;
+}
+.startMatchContainer > div {
+    width: 100%;
 }
 .seasonPreviewCardContainer {
     width: 80vw;
     justify-self: center;
     display: flex;
     flex-direction: column;
+}
+.seasonDetailContainer {
+    display: grid;
+    grid-template-columns: 110px auto;
+    gap: 20px;
+}
+/* The menu on the left hand side that chooses the view */
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: rgba(18, 18, 18, 0.7);
+    border-right: 3px solid rgb(18, 18, 18);
+    position: sticky;
+    top: 60px; left: 0; /* Must match the height of the header */
+    height: calc(100vh - 60px); /* Fills the rest of the height */
+    box-sizing: border-box;
+    padding-top: 20px;
+
+    .menuButton {
+        width: 70px;
+        height: 70px;
+        padding: 10px;
+        align-self: center;
+
+        img {
+            width: 100%;
+            pointer-events: none;
+        }
+    }
+}
+{/* The view state of menu above */}
+.activeView {
+    padding: 30px;
 }
 
 /* Season preview card is the single card styles within the SeasonPreviewCard.tsx file */
@@ -180,7 +229,7 @@ main {
 /* GLOBAL List view of characters */
 .rosterList {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     justify-content: center;
     gap: 20px;
 
@@ -205,28 +254,131 @@ main {
         text-align: center;
     }
 }
-/* GLOBAL List view of the perks */
-.perkList {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    justify-content: center;
-    gap: 20px;
+.matchHeader {
+    display: flex;
+    justify-content: space-between;
+}
+/* GLOBAL Grade styles : used specifically for the grade image and roman number */
+.gradeDisplay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.grade {
+    position: relative;
+    width: fit-content;
 
-    button {
-        padding: 0;
-    }
-
-    .dbdInputButton {
-        position: relative;
-        filter: grayscale(100%) opacity(0.5);
-        transition: all 0.3s ease;
-    }
-    .dbdInputButton.selectedButton {
-        filter: grayscale(0%) opacity(1);
-    }
     img {
-        width: 100% !important;
+        display: block;
+        height: 80px;
+        width: auto;
     }
+    p {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%, -50%);
+        margin: 0;
+        z-index: 10;
+        font-size: 1.8rem;
+        font-weight: bold;
+        text-shadow:
+                2px 2px 0 #000,
+                -1px -1px 0 #000,
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
+    }
+}
+.pipContainer {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-bottom: 10px;
+}
+.pip {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #555;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+.pip.filled {
+    background-color: var(--text-muted);
+    border-color: var(--text-muted);
+    box-shadow: 0 0 8px rgba(201, 200, 199, 0.6);
+}
+/* GLOBAL Selected list view of the perks */
+.loadoutContainer {
+    display: flex;
+    gap: 40px;
+    box-sizing: border-box;
+}
+.perkSlot {
+    width: 100px;
+    height: 100px;
+    background: rgba(18, 18, 18, 0.7);
+    border: 3px solid rgb(18, 18, 18);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+    position: relative;
+
+    img {
+        width: 110%;
+        height: 110%;
+        object-fit: cover;
+    }
+}
+.perkSlot.activeSlot {
+    cursor: pointer;
+    background-color: #070809;
+    background-image:
+        /* Top Left (Horizontal, Vertical) */
+            linear-gradient(white, white), linear-gradient(white, white),
+                /* Top Right */
+            linear-gradient(white, white), linear-gradient(white, white),
+                /* Bottom Right */
+            linear-gradient(white, white), linear-gradient(white, white),
+                /* Bottom Left */
+            linear-gradient(white, white), linear-gradient(white, white);
+    background-repeat: no-repeat;
+    background-position:
+            0 0, 0 0,           /* Top Left */
+            100% 0, 100% 0,     /* Top Right */
+            100% 100%, 100% 100%, /* Bottom Right */
+            0 100%, 0 100%;     /* Bottom Left */
+    background-size:
+            0 2px, 2px 0,  /* Top Left */
+            0 2px, 2px 0,  /* Top Right */
+            0 2px, 2px 0,  /* Bottom Right */
+            0 2px, 2px 0;  /* Bottom Left */
+    transition:
+            background-size 0.3s ease-out,
+            transform 0.2s ease-in-out,
+            border-color 0.3s ease;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.90);
+        background-size:
+                25% 2px, 2px 25%, /* Top Left */
+                25% 2px, 2px 25%, /* Top Right */
+                25% 2px, 2px 25%, /* Bottom Right */
+                25% 2px, 2px 25%; /* Bottom Left */
+    }
+}
+.perkSlot.lockedSlot {
+    background: repeating-linear-gradient(
+    45deg, #1a1a1a, #1a1a1a 10px, #000 10px, #000 20px
+    );
+    border-color: #222;
+    opacity: 0.6;
+}
+.perkSlot.emptySlot {
+    border-style: dashed;
+    border-color: #666;
 }
 /* The price tags over the killers */
 .priceTag {
@@ -355,6 +507,7 @@ main {
     background-color: rgba(18, 18, 18, 0.95);
     color: var(--text-muted);
     box-shadow: -8px 6px 3px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
 }
 /* Specific to the season setup options */
 .seasonSetup {
@@ -403,31 +556,5 @@ main {
                 20px 2px, 2px 20px, /* Bottom Right */
                 20px 2px, 2px 20px; /* Bottom Left */
         color: white;
-    }
-}
-/* GLOBAL Grade styles : used specifically for the grade image and roman number */
-.grade {
-    position: relative;
-    width: fit-content;
-
-    img {
-        display: block;
-        height: 80px;
-        width: auto;
-    }
-    p {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%, -50%);
-        margin: 0;
-        z-index: 10;
-        font-size: 1.8rem;
-        font-weight: bold;
-        text-shadow:
-            2px 2px 0 #000,
-            -1px -1px 0 #000,
-            1px -1px 0 #000,
-            -1px 1px 0 #000,
-            1px 1px 0 #000;
     }
 }
